I refactored HabitTranslationDto and all related logic to prevent field duplication and make code more flexible, fixed/rewrote tests according to new code